day7 rest day8 append and delete

--- a/guliMall/开发笔记.md
+++ b/guliMall/开发笔记.md
@@ -20,7 +20,10 @@
  *              1）、使用@MapperScan
  *              2）、告诉MyBatis-Plus，sql映射文件位置
 
-### 3.
+### 3. 逻辑删除
+*  1）、配置全局的逻辑删除规则（省略）
+*  2）、配置逻辑删除的组件Bean（省略）
+*  3）、给Bean加上逻辑删除注解@TableLogic
 
 ## 2.使用Nacos作为配置中心管理统一配置
 
@@ -38,4 +41,4 @@ config
 
 ### 6.命名空间 namespace test prop dev (每一个微服务创建自己命名空间)
 
-48
+53
