day11-12  barnd,category and relation

--- a/guliMall/开发笔记.md
+++ b/guliMall/开发笔记.md
@@ -41,4 +41,34 @@ config
 
 ### 6.命名空间 namespace test prop dev (每一个微服务创建自己命名空间)
 
-68
+2、JSR303 数据校验
+1）、使用步骤
+ 标注校验注解
+javax.validation.constraints 中定义了非常多的校验注解
+@Email、@Future、@NotBlank、@Size 等
+ 使用校验功能
+@Valid 开启校验功能提取校验错误信息
+BindingResult 获取校验结果
+ 分组校验与自定义校验
+Groups 定义校验分组信息；
+可以编写自定义校验注解和自定义校验器
+默认情况下，异常信息会从应用的 classpath 下的 ValidationMessages.properties 文件中加载；
+
+
+3、全局异常处理
+@ControllerAdvice+@ExceptionHandler
+系统错误码
+/***
+* 错误码和错误信息定义类
+* 1. 错误码定义规则为 5 为数字
+* 2. 前两位表示业务场景，最后三位表示错误码。例如：100001。10:通用001:系统未知异常
+* 3. 维护错误码后需要维护错误描述，将他们定义为枚举形式
+* 错误码列表：
+* 10: 通用
+* 001：参数格式校验
+* 11: 商品
+* 12: 订单
+* 13: 购物车
+* 14: 物流
+
+83
