d25 elsearch and spuup

--- a/guliMall/开发笔记.md
+++ b/guliMall/开发笔记.md
@@ -71,4 +71,21 @@ Groups 定义校验分组信息；
 * 13: 购物车
 * 14: 物流
 
-130
+Feign调用流程
+1.构造请求数据 将对象转为json
+RequestTemplate template = buildTemplateFromArgs.create(argv)
+
+2.发送请求进行执行 (执行成功解码响应数据)
+executeAndDecode(template)
+
+3.执行成功有重试机制
+while(true){
+try{
+executeAndDecode(template)
+}catch{
+retryer.continueOrPropageta(e);
+throw ex;
+continue;
+}
+
+136
